# quickboard

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  eslint.config.js  package.json  panel.html  pnpm-lock.yaml  tailwind.config.js  tray.html  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: RELEASING.md
docs/adr/: README.md
docs/prototypes/: creative-vision-prototype.html
docs/superpowers/plans/: 2026-06-21-quickboard-app-shell.md  2026-06-21-quickboard-foundation.md
docs/superpowers/specs/: 2026-06-21-quickboard-design.md  2026-06-21-quickboard-motion.md  2026-06-21-quickboard-redesign.md  2026-06-28-image-clipboard-capture-design.md
docs/superpowers/spikes/: biometric-gate.md  drag-out.md
plans/: 001-fix-keyring-dek-error-handling.md  002-test-ci-baseline.md  003-biometric-gate-test-seam.md  004-touchid-failure-feedback.md  005-summon-blur-guard-during-auth.md  006-sweep-drag-temp-dirs.md  007-encrypt-clipboard-history.md  008-targeted-board-updates.md  009-image-thumbnail-cache.md  010-tray-discoverability.md  011-honest-backup-export-import.md  README.md
public/logo_glass.icon/: icon.json
scripts/: clipboard-selfcheck.mjs  live-sync-image-paste-selfcheck.mjs  release.sh  setup-signing.sh  tray-selfcheck.mjs  tray-ui-selfcheck.mjs
src/: App.tsx  index.css  main.tsx  panel.tsx  router.tsx  tray.tsx
src-tauri/: Assets.car  Cargo.toml  Info.plist  sample-drag.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: blobs.rs  commands.rs  confidential.rs  crypto.rs  keyring_dek.rs  lib.rs  main.rs  model.rs  store.rs  summon.rs
src/components/: AccessibilityBanner.tsx  AddItemDialog.tsx  AppShell.tsx  Avatar.tsx  CategoryCard.tsx  Combobox.tsx  CommandPalette.tsx  CommitSheet.tsx  Confetti.tsx  ConfirmDialog.tsx  CopyCheck.tsx  CopyMorph.tsx  CustomizePopover.tsx  DetailModal.tsx  Dither.tsx  DitherArt.tsx  FavoriteButton.tsx  FolderEditor.tsx  Generative.tsx  GradientBrand.tsx  ImageCropper.tsx  ItemCard.tsx  ItemMenu.tsx  ItemRow.tsx  MintFlight.tsx  NewEnvironmentModal.tsx  NewItemSheet.tsx  NoteCard.tsx  Onboarding.tsx  ProfileEditor.tsx  RollNumber.tsx  Select.tsx  ShaderBaker.tsx  ShaderBakerCanvas.tsx  ShaderHeader.tsx  Sidebar.tsx  SummonPanel.tsx  Toast.tsx  TrayDock.tsx  TrayNudge.tsx  (+2 more)
src/components/ui/: button.tsx  dialog.tsx  sheet.tsx
src/lib/: appearance.ts  backup.test.ts  backup.ts  board-sync.test.ts  board-sync.ts  category-color.ts  clipboard.test.ts  clipboard.ts  commit-tray.ts  confidential-errors.ts  content-type.test.ts  content-type.ts  cover.ts  drag.ts  environments.ts  gradient-shader.ts  icons.ts  image-cache.test.ts  image-cache.ts  input-assist.ts  ipc.ts  items-store.tsx  profile.ts  settings.ts  sfx.ts  tints.test.ts  tints.ts  tray.ts  types.ts  updater.ts  use-copy.ts  use-drag-out.ts  use-preview.ts  use-reveal.ts
src/remotion/: QuickboardVideo.tsx  Root.tsx  index.tsx
src/routes/: Home.tsx  Settings.tsx
