[package]
name = "quickboard"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quickboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-drag = "=2.1.1"

# Crypto core (Plan 2, Task 4): AES-256-GCM authenticated encryption.
# Exact-pinned per supply-chain rules. aes-gcm 0.10.3 + rand 0.8.5 are a
# known-compatible stable pair (aes-gcm's getrandom feature aligns with rand 0.8).
aes-gcm = "=0.10.3"
rand = "=0.8.5"

[target.'cfg(target_os = "macos")'.dependencies]
# SPIKE: Touch ID gate via LocalAuthentication (LAContext). robius-authentication
# wraps objc2-local-authentication and works UNSIGNED (no keychain entitlement),
# unlike the previous security-framework keychain approach which failed with
# -34018 errSecMissingEntitlement under unsigned `tauri dev`. Exact-pinned per
# supply-chain rules; cross-platform crate aligned with our future goals.
robius-authentication = "=0.1.1"

