[package]
name = "quickboard"
version = "0.2.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quickboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "=1.0.128"
tauri-plugin-drag = "=2.1.1"

# Native file picker (Plan 2, Task 6): backs the Add-item dialog's "Choose file"
# button via the JS @tauri-apps/plugin-dialog open(). First-party Tauri plugin;
# exact-pinned to match the JS plugin (2.7.1) per supply-chain rules.
tauri-plugin-dialog = "=2.7.1"

# In-app auto-update (self-updates from GitHub Releases). First-party Tauri
# plugin; exact-pinned to match the JS plugin (2.10.1) per supply-chain rules.
tauri-plugin-updater = "=2.10.1"
tauri-plugin-process = "=2.3.1"

# Crypto core (Plan 2, Task 4): AES-256-GCM authenticated encryption.
# Exact-pinned per supply-chain rules. aes-gcm 0.10.3 + rand 0.8.5 are a
# known-compatible stable pair (aes-gcm's getrandom feature aligns with rand 0.8).
aes-gcm = "=0.10.3"
rand = "=0.8.5"

# DEK persistence (Plan 2, Task 5): store the Data Encryption Key in the OS
# keyring (macOS login keychain via the `apple-native` backend). keyring 3.2.0
# ships its in-memory `mock` credential store without a cargo feature gate; it
# is used ONLY in unit tests so they never touch the real keychain (which would
# pop a GUI prompt / hang headless). Exact-pinned per supply-chain rules.
keyring = { version = "=3.2.0", features = ["apple-native"] }
base64 = "=0.22.1"

# Item store (Plan 2, Task 6): encrypted SQLite persistence.
# rusqlite bundled = statically links libsqlite3 (no system dep needed).
# serde derive already pulled in above; uuid v4 for item IDs.
# All exact-pinned per supply-chain rules.
rusqlite = { version = "=0.32.1", features = ["bundled"] }
uuid = { version = "=1.10.0", features = ["v4"] }
tauri-plugin-global-shortcut = "2.3.2"
enigo = "0.6.1"
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
tauri-plugin-autostart = "2.5.1"
objc2-foundation = "0.3.2"

[target.'cfg(target_os = "macos")'.dependencies]
# SPIKE: Touch ID gate via LocalAuthentication (LAContext). robius-authentication
# wraps objc2-local-authentication and works UNSIGNED (no keychain entitlement),
# unlike the previous security-framework keychain approach which failed with
# -34018 errSecMissingEntitlement under unsigned `tauri dev`. Exact-pinned per
# supply-chain rules; cross-platform crate aligned with our future goals.
robius-authentication = "=0.1.1"

